# wtftw

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  default.nix
config/: config.rs
core/: Cargo.toml
core/src/: config.rs  core.rs  core.rs.racertmp  handlers.rs  keycodes.rs  layout.rs  lib.rs  logger.rs  util.rs  window_manager.rs  window_system.rs  wtftw.rs
core/src/core/: mod.rs  rational_rect.rs  screen.rs  stack.rs  workspace.rs  workspaces.rs
core/tests/: core.rs
core/tests/core/: stack.rs  workspace.rs
example/: config.rs
scripts/: xephyr.sh
src/: config.rs  core.rs  handlers.rs  layout.rs  local_config.rs  logger.rs  util.rs  window_manager.rs  window_system.rs  wtftw.rs  xlib_window_system.rs
tests/: core.rs
xlib/: Cargo.toml
xlib/src/: xlib_window_system.rs
