[project]

name = "wtftw"
version = "0.4.4"
authors = ["Simon Wollwage"]

[dependencies]
bitflags = "1.1"
serde_json = "1.0.16"
getopts = "*"
log = "*"
libc = "*"
dylib = "*"
simplelog = "*"
zombie = "*"
wtftw_core = { path = "core" }
dirs = "1"

[dependencies.wtftw_xlib]
path = "xlib"

[lib]
name = "wtftw"
path = "core/src/wtftw.rs"

[[bin]]
name = "wtftw"
path = "src/wtftw.rs"
