[project]

name = "wtftw_core"
version = "0.2.0"
authors = ["Simon Wollwage"]

[dependencies]
bitflags = "0.1"
#rustc-serialize = "*"
log = "*"

[dependencies.rustc-serialize]
git = "https://github.com/Kintaro/rustc-serialize.git"
branch = "slice"

[lib]
name = "wtftw_core"
path = "src/wtftw.rs"
crate-type = ["rlib"]
