[project]

name = "wtftw_xlib"
version = "0.3.1"
authors = ["Simon Wollwage"]

[dependencies]
log = "*"
libc = "*"

[dependencies.xlib]
git = "https://github.com/Kintaro/rust-xlib.git"
branch = "wtftw"

[dependencies.xinerama]
git = "https://github.com/Kintaro/rust-xinerama.git"

[dependencies.wtftw_core]
path = "../core"

[lib]
name = "wtftw_xlib"
path = "src/xlib_window_system.rs"
crate-type = ["rlib"]
